<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorDarkBackground"
    tools:context="com.example.sander.pictureswipe.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorLight"
        android:text="@string/login" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/colorExtraDarkBackground"
        android:textColor="@color/colorExtraDarkBackground"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/password"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/colorExtraDarkBackground"
        android:textColor="@color/colorExtraDarkBackground"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        android:textColor="@color/colorRedDecline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/general_light_btn"
            android:textColor="@color/colorLight"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            android:id="@+id/login"
            android:layout_marginStart="5dp"
            android:background="@drawable/general_btn"
            android:textColor="@color/colorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>
</LinearLayout>
